--- a/assets/css/try.css
+++ b/assets/css/try.css
@@ -502,3 +502,55 @@ i{
         color:var(--accent-color);
     }
 }
+
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: var(--accent-color);
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    cursor: pointer;
+    font-size: var(--font-size-medium);
+    font-weight: 600;
+}
+
+.wrapper {
+    width: 420px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    border-radius: 20px;
+    padding: 30px 40px;
+}
+
+.wrapper h1 {
+    font-size: var(--font-size-larger);
+    text-align: center;
+}
+
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
+
+.wrapper .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+#acknowledge {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+
+
+
